test/files/neg/t6666c.check
t6666c.scala:3: error: Implementation restriction: access of method x$1 in class D from object X$1, would require illegal premature access to the unconstructed `this` of class D
class D extends C({def x = 0; object X { x }})
                                         ^
t6666c.scala:6: error: Implementation restriction: access of method x$2 in class D1 from object X$3, would require illegal premature access to the unconstructed `this` of class D1
class D1 extends C1({def x = 0; () => {object X { x }}})
                                                  ^
t6666c.scala:9: error: Implementation restriction: access of method x$3 from object X$5, would require illegal premature access to the unconstructed `this` of <$anon: Function0>
class D2 extends C2({def x = 0; object X { x }})
                                           ^
three errors found
